# md-to-github-pdf

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/md_to_github_pdf/: __init__.py  __main__.py  core.py
tests/: test_basic.py  test_smoke.py
